<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aayush.randompatrolling.Login"
    android:background="#4d8fac">
    <EditText
        android:id="@+id/user_username"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/user_password"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/Sign_in"
        app:layout_constraintLeft_toLeftOf="@+id/user_password"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="22dp"
        android:text="@string/Sign_in"
        android:background="#44333333"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintRight_toRightOf="@+id/user_password"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/user_password"
        app:layout_constraintHorizontal_bias="0.444" />

    <TextView
        android:id="@+id/Sign_in"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="33dp"
        android:text="@string/Sign_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="120dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_username"
        tools:layout_constraintTop_creator="1"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="11dp"
        android:text="@string/register"
        android:background="#44333333"
        android:textColor="#fff"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="@+id/user_password"
        app:layout_constraintRight_toRightOf="@+id/user_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
