<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aayush.randompatrolling.register">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/register_Name"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/register_password"
        app:layout_constraintRight_toRightOf="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/register_user_type"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="UserType (User or Admin)"
        android:inputType="text"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/register_Name"
        app:layout_constraintTop_toBottomOf="@+id/register_Name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/register_Name"
        android:layout_marginTop="83dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/register_organization"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/organization"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/register_Name"
        app:layout_constraintRight_toRightOf="@+id/register_Name"
        app:layout_constraintTop_toBottomOf="@+id/register_Name"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/register"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/register_user_type"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
